# etfmomentum

./: .gitignore  API_CLI_FIX_SUMMARY.md  API_KEY_GUIDE.md  API_KEY_IMPLEMENTATION.md  BACKTEST_REPORT.md  CLAUDE.md  CLEANUP_GUIDE.md  DECISIONS.md  ETF_MOMENTUM_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  INSTALL_IN_OTHER_PROJECT.md  LIBRARY_USAGE.md  POST_CLEANUP_TEST_REPORT.md  PREREQUISITES.md  QUICK_START.md  README.md  RELEASE_NOTES.md  TASK_ETF_RS_BACKTEST.md  UI_DASHBOARD_TEST_SUMMARY.md  cleanup_workspace.py  pyproject.toml  start_api.sh  start_ui.sh  test_installation.py  test_ui_integration.py  verify_setup.py
.claude/: settings.local.json
api/: README.md  main.py  test_api.py
api/models/: schemas.py
api/routes/: backtest.py  config.py  dashboard.py  signals.py
etfmomentum/: __init__.py  __main__.py  backtest.py  config.py  data_fetcher.py  defensive_strategy_tester.py  etf_loader.py  main.py  optimizer.py  report.py  rs_engine.py  short_optimizer.py  signal_generator.py  signal_report.py  timing_strategy_tester.py  trading_frequency_analyzer.py  volatility_regime.py  volatility_timing_analyzer.py  walk_forward.py
etfmomentum/etflist/: bond_etfs.csv  commodity_etfs.csv  developed_market_etfs.csv  emerging_market_etfs.csv  factor_etfs.csv  multi_asset_etfs.csv  sp500_sector_etfs.csv  top20_stock.csv
ui/: README.md  README_FRONTEND.md  index.html  package-lock.json  package.json  test_ui_screens.js
ui/src/: App.css  App.jsx  index.css
ui/src/components/: Navigation.css  Navigation.jsx
ui/src/pages/: Backtest.css  Backtest.jsx  Dashboard.css  (+3 more)
(+1 files in other folders)
