[project]
name = "etfmomentum"
version = "0.3.0"
description = "ETF Relative Strength Momentum Rotation Strategy with backtesting and signal generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]

# CLI entry points - enables commands like 'etfmomentum signal'
[project.scripts]
etfmomentum = "etfmomentum.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etfmomentum"]

[tool.uv]
dev-dependencies = []
